fixed overflow bug

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
 body {
     color: var(--text-color);
     background-color: var(--bg-color);
+    width: 100vw;
 }
 
 ::selection {
@@ -26,18 +27,18 @@ body {
 }
 
 .container {
-    width: 100%;
     overflow-x: hidden;
 }
 
 /* Navbar styling */
 
 header {
-    width: 100%;
+    width: 100vw;
     position: fixed;
     top: 0;
     z-index: 2;
     background-color: var(--bg-color);
+    padding: 25px;
 }
 
 navbar {
@@ -47,7 +48,6 @@ navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px;
     font-weight: 500;
 }
 
@@ -346,7 +346,7 @@ navbar a:hover {
 }
 
 .dropdown-container {
-    width: calc(50% - 40px);
+    width: calc(50% - 50px);
 }
 
 .dropdown-heading {
@@ -990,6 +990,12 @@ footer{
     .contact-content {
         justify-content: space-around;
     }
+    .dropdown-heading h1{
+        font-size: 16px;
+    }
+    .dropdown-heading p{
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width: 820px) {
@@ -1013,7 +1019,7 @@ footer{
 }
 
 @media screen and (max-width: 760px) {
-    .skills-content div {
+    .skills-content .dropdown-container {
         width: 100%;
         max-width: 500px;
         margin: 0 auto;
@@ -1023,6 +1029,7 @@ footer{
 @media screen and (max-width: 700px) {
     header {
         top: unset;
+        left: 0;
         bottom: 0;
     }
 
@@ -1035,7 +1042,7 @@ footer{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         text-align: center;
-        padding: 30px 20px;
+        padding: 30px 0;
         transform: translateY(100%);
         transition: all 0.5s;
         border-top: 1px solid grey;
@@ -1138,6 +1145,9 @@ footer{
 
     .contact-content form {
         width: 100%;
+    }
+    .qualification-btn{
+        gap:50px;
     }
 }
 
